[package]
name = "rustyproxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4.18", features = ["derive"] }
log = "0.4"
futures = "0.3"
opentelemetry = { version = "0.30.0" }
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic"] }
rand = "0.8"
tarpc = { version = "0.37", features = ["full"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tracing = { version = "0.1" }
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.30.0"
serde = { version = "1.0.219", features = ["derive"] }
rusqlite = { version = "0.37.0", features = ["bundled", "blob"] }
bincode = "1.3.3"


[lib]
name = "service"
path = "service/src/lib.rs"

[[bin]]
name = "rustyproxy"
path = "rustyproxy/src/main.rs"

[[bin]]
name = "rustyproxy-srv"
path = "rustyproxy-srv/src/main.rs"
